compiler/tests/invalid_programs/void_argument.jm
!TypeError

def foo()
  puts("foo")
end

puts(foo())
